--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe </title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
 </head>
+
 <body>
     <nav>
         <ul>
@@ -28,14 +30,13 @@
         </div>
         <div class="gameInfo">
             <h1>Wecome to Tic Tac Toe</h1>
-            <div class="info">
-                <div class="info">Turn for X</div>
-                <button id="reset">Reset</button>
-            </div>
+            <div class="info">Turn for X</div>
+            <button id="reset">Reset</button>
             <div class="imgBox">
                 <img src="./excited.gif" alt="">
             </div>
         </div>
     </div>
 </body>
+
 </html>
