--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </nav>
     <div class="gameContainer">
         <div class="container">
+            <div class="line"></div>
             <div class="box bt-0 bl-0"><span class="boxtext"></span></div>
             <div class="box bt-0"><span class="boxtext"></span></div>
             <div class="box bt-0 br-0"><span class="boxtext"></span></div>
@@ -30,8 +31,10 @@
         </div>
         <div class="gameInfo">
             <h1>Wecome to Tic Tac Toe</h1>
-            <div class="info">Turn for X</div>
-            <button id="reset">Reset</button>
+            <div class="gameInfoContainer">
+                <div class="info">Turn for X</div>
+                <button id="reset">Reset</button>
+            </div>
             <div class="imgBox">
                 <img src="./excited.gif" alt="">
             </div>
