--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Tic Tac Toe </title>
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -17,6 +20,7 @@
         </ul>
     </nav>
     <div class="gameContainer">
+        <i id="volumeButton" class="fa-solid fa-volume-xmark"></i>
         <div class="container">
             <div class="line"></div>
             <div class="box bt-0 bl-0"><span class="boxtext"></span></div>
